# Search_engine

./: .gitignore  CMakeLists.txt  answers.json  config.json  main.cpp  project structure.odt  requests.json
SearchEngineGUI/: CMakeLists.txt  CMakeLists.txt.user.1d5c814  filelistmodel.cpp  filelistmodel.h  lineeditdelegate.cpp  lineeditdelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  tablemodel.cpp  tablemodel.h
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
modules/: CMakeLists.txt
modules/include/: ConfigException.h  ConverterJSON.h  InvertedIndex.h  SearchServer.h  Stopwatch.h  answer.h
modules/src/: ConfigException.cpp  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  Stopwatch.cpp  main.cpp
nlohmann_json/: CMakeLists.txt
nlohmann_json/cmake/: ci.cmake
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
src/: ConverterJSON.cpp
tests/: CMakeLists.txt  my_test.cpp
